<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/cloud_outline"
            android:scaleType="centerInside"
            android:paddingBottom="100dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/blue_block"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/blue_primary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:orientation="vertical"
        android:background="@drawable/myrect"
        android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/blue_primary"
                android:textSize="24sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/blue_primary"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/blue_primary"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:text="@string/login"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_register_create_account"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:onClick="openRegister"/>

</RelativeLayout>